[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/angry_pig/walking/walking2.png" type="Texture" id=1]
[ext_resource path="res://assets/angry_pig/walking/walking3.png" type="Texture" id=2]
[ext_resource path="res://assets/angry_pig/walking/walking1.png" type="Texture" id=3]
[ext_resource path="res://assets/angry_pig/walking/walking4.png" type="Texture" id=4]
[ext_resource path="res://assets/angry_pig/walking/walking5.png" type="Texture" id=5]
[ext_resource path="res://assets/angry_pig/walking/walking6.png" type="Texture" id=6]
[ext_resource path="res://assets/angry_pig/walking/walking8.png" type="Texture" id=7]
[ext_resource path="res://assets/angry_pig/walking/walking7.png" type="Texture" id=8]
[ext_resource path="res://assets/angry_pig/idle/idle4.png" type="Texture" id=9]
[ext_resource path="res://assets/angry_pig/idle/idle3.png" type="Texture" id=10]
[ext_resource path="res://assets/angry_pig/idle/idle2.png" type="Texture" id=11]
[ext_resource path="res://assets/angry_pig/idle/idle1.png" type="Texture" id=12]
[ext_resource path="res://assets/angry_pig/idle/idle.png" type="Texture" id=13]
[ext_resource path="res://Scenes/pickles.gd" type="Script" id=14]
[ext_resource path="res://assets/angry_pig/angryPig.png" type="Texture" id=15]
[ext_resource path="res://assets/sound and music/Sounds/pigoink1.mp3" type="AudioStream" id=16]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.6667, 2.08333 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "awalk",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.5, 31.5 )

[node name="pickles" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.499999, 43.875 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "awalk"
frame = 4
playing = true

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 64 )
collision_mask = 2

[node name="sides_checker" type="Area2D" parent="."]
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( -0.5, 5.5 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="oinkFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
